<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:padding="20sp">

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"/>

    <EditText
        android:id="@+id/et_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/contrasena"/>

    <Button
        android:id="@+id/ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"/>

    <Button
        android:id="@+id/registrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"/>

    <TextView
        android:id="@+id/recuperar_contrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_contrasena"
        android:textAlignment="center"/>

</LinearLayout>