<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:orientation="vertical"
    android:padding="10sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_datos_personales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_personales"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_nombre_registro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/et_genero_registrarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genero"
                android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_edad_registrarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edad"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/et_telefono_registrarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:layout_weight="1"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_datos_de_la_cuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_de_la_cuenta"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_correo_registrarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico"
                android:textAlignment="center"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/et_contrasena_registrarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/contrasena_registro"
                android:inputType="textPassword"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/et_confirmar_contrasena_registrarme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:hint="@string/confirmar_contrasena_registro"
                android:inputType="textPassword"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_registrarme_registrarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarme"/>

        <TextView
            android:id="@+id/tv_iniciar_sesion_registrarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textAlignment="center"/>

    </LinearLayout>

</LinearLayout>